--- a/distrisandiz-master/app/src/main/res/layout/nav_header_sesion__usuario.xml
+++ b/distrisandiz-master/app/src/main/res/layout/nav_header_sesion__usuario.xml
@@ -27,7 +27,7 @@
         android:textSize="20sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:gravity="center"
-        android:text="José Sántiz Ruiz"/>
+        android:text="Nombre del usuario"/>
 
     <TextView
         android:id="@+id/txtRol"
