--- a/distrisandiz-master/app/src/main/res/values/colors.xml
+++ b/distrisandiz-master/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1469A4</color>
-    <color name="colorPrimaryDark">#07548b</color>
+    <color name="colorPrimary">#0078ff</color>
+    <color name="colorPrimaryDark">#135ECE</color>
     <color name="colorAccent">#000000</color>
 
-    <color name="colorInicioSesion">#1469A4</color>
+    <color name="colorInicioSesion">#0078ff</color>
     <color name="colorBackGround">#daecf4</color>
     <color name="lightgray">#ededed</color>
     <color name="colorBordeButton">#94c0d2</color>
