--- a/distrisandiz-master/app/src/main/res/drawable-v24/layout_boton_redondeado_blanco.xml
+++ b/distrisandiz-master/app/src/main/res/drawable-v24/layout_boton_redondeado_blanco.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#ffffff"/>
     <stroke android:width="1dp"
-        android:color="#ffffff"/>
+        android:color="#E0E0E0" />
     <padding android:left="1dp"
         android:top="1dp"
         android:right="1dp"
         android:bottom="1dp"/>
-    <corners android:radius="22px"/>
+    <corners android:radius="16px"/>
 </shape>
