--- a/distrisandiz-master/app/src/main/res/drawable-v24/layout_redondeado.xml
+++ b/distrisandiz-master/app/src/main/res/drawable-v24/layout_redondeado.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#ffffff"/>
     <stroke android:width="1dp"
-        android:color="#000000"/>
+        android:color="#E0E0E0"/>
     <padding android:left="1dp"
         android:top="0dp"
         android:right="0dp"
         android:bottom="0dp"/>
-    <corners android:radius="5px"/>
+    <corners android:topRightRadius="30dp" android:topLeftRadius="30dp"/>
 </shape>
