--- a/distrisandiz-master/app/src/main/res/drawable/layout_dialog.xml
+++ b/distrisandiz-master/app/src/main/res/drawable/layout_dialog.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ffffff"/>
+    <solid android:color="#F3F3F3"/>
     <stroke android:width="1dp"
-        android:color="#777777"
-        />
+        android:color="#F3F3F3"/>
     <padding android:left="1dp"
         android:top="1dp"
         android:right="1dp"
         android:bottom="1dp"/>
-    <corners android:radius="15px"/>
+    <corners android:radius="22px"/>
 </shape>
