--- a/distrisandiz-master/app/src/main/res/drawable/layout_redondeado_listaclientes.xml
+++ b/distrisandiz-master/app/src/main/res/drawable/layout_redondeado_listaclientes.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EEEEEE"/>
+    <solid android:color="#FFFFFF"/>
     <stroke android:width="1dp"
-        android:color="#E0E0E0"/>
+        android:color="#FFFFFF"/>
     <padding android:left="1dp"
         android:top="1dp"
         android:right="1dp"
         android:bottom="1dp"/>
-    <corners android:radius="10px"/>
+    <corners android:bottomRightRadius="5dp" android:bottomLeftRadius="5dp" android:topLeftRadius="5dp" android:topRightRadius="5dp"/>
 </shape>
