--- a/distrisandiz-master/app/src/main/res/drawable/spinner_list.xml
+++ b/distrisandiz-master/app/src/main/res/drawable/spinner_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ffffff"/>
+    <solid android:color="#DADADA"/>
     <stroke android:width="1dp"
-        android:color="#777777"
+        android:color="#DADADA"
         />
     <padding android:left="1dp"
         android:top="1dp"
