--- a/distrisandiz-master/app/src/main/res/layout/activity_main.xml
+++ b/distrisandiz-master/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/fondo2"
+    android:background="@drawable/fondos2"
     android:orientation="vertical">
 
     <LinearLayout
