--- a/distrisandiz-master/app/src/main/res/layout/activity_venta_productos.xml
+++ b/distrisandiz-master/app/src/main/res/layout/activity_venta_productos.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".venta_productos"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#EFEFEF">
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
@@ -16,20 +17,20 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true">
         <TextView
-        android:layout_width="104dp"
-        android:layout_height="wrap_content"
-        android:text="CLIENTE:"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold"></TextView>
+            android:layout_width="104dp"
+            android:layout_height="wrap_content"
+            android:text="CLIENTE:"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold"></TextView>
 
         <TextView
-        android:id="@+id/textViewCliente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="16dp"
-        android:textStyle="bold"></TextView>
+            android:id="@+id/textViewCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:textSize="16dp"
+            android:textStyle="bold"></TextView>
     </LinearLayout>
 
     <LinearLayout
@@ -40,7 +41,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
-
         android:orientation="vertical"
         android:paddingBottom="10dp">
 
@@ -118,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -138,23 +138,29 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="5dp"
-                        android:background="#BBDEFB"
                         android:text="$"
-                        android:textColor="#000000"
-                        android:textSize="23dp"
-                        android:textStyle="bold"></TextView>
+                        android:textColor="#666666"
+                        android:textSize="32dp"
+                        android:textStyle="bold"
+                        android:shadowColor="#808080"
+                        android:shadowDx="0"
+                        android:shadowDy="8"
+                        android:shadowRadius="4"></TextView>
 
                     <TextView
                         android:id="@+id/txtTotal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:background="#BBDEFB"
                         android:inputType="number"
                         android:text="0.00"
-                        android:textColor="#000000"
-                        android:textSize="22dp"
-                        android:textStyle="bold" />
+                        android:textColor="#666666"
+                        android:textSize="32dp"
+                        android:textStyle="bold"
+                        android:shadowColor="#808080"
+                        android:shadowDx="0"
+                        android:shadowDy="8"
+                        android:shadowRadius="4"/>
 
                 </LinearLayout>
 
@@ -183,28 +189,28 @@
                 </LinearLayout>-->
             </LinearLayout>
 
-           <!-- <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="53dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingStart="30dp">
+            <!-- <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="53dp"
+                 android:layout_gravity="center"
+                 android:layout_weight="1"
+                 android:orientation="vertical"
+                 android:paddingStart="30dp">
 
-                <RadioButton
-                    android:id="@+id/radioContado"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Contado"
-                    android:textSize="5sp" />
+                 <RadioButton
+                     android:id="@+id/radioContado"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:text="Contado"
+                     android:textSize="5sp" />
 
-                <RadioButton
-                    android:id="@+id/radioCredito"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Crèdito"
-                    android:textSize="5sp" />
-            </LinearLayout>-->
+                 <RadioButton
+                     android:id="@+id/radioCredito"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:text="Crèdito"
+                     android:textSize="5sp" />
+             </LinearLayout>-->
         </LinearLayout>
     </LinearLayout>
 
@@ -219,13 +225,16 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp"
         android:background="@drawable/layout_redondeado"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:elevation="-50dp"
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp">
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="13.4dp"
+            android:layout_marginStart="14dp">
 
             <TextView
                 android:id="@+id/editNombreProducto"
@@ -244,18 +253,19 @@
                 android:layout_height="wrap_content"
                 android:hint="Cantidad"
                 android:layout_weight="1"
-                android:textSize="13dp"
+                android:textSize="15dp"
                 android:inputType="numberDecimal"
                 android:gravity="center">
             </EditText>
 
             <Button
                 android:id="@+id/btnAgregarProducto"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="1dp"
+                android:layout_height="26dp"
                 android:layout_weight="1"
                 android:background="@drawable/layout_boton_redondeado"
                 android:text="AGREGAR"
+                android:elevation="10dp"
                 android:textColor="@color/cardview_light_background"
                 android:textSize="15dp"></Button>
         </LinearLayout>
@@ -276,7 +286,9 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal">
 
                     <ListView
@@ -285,7 +297,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="start"
                         android:layout_weight="1"
-                        android:paddingStart="5dp"></ListView>
+                        android:paddingStart="6dp"></ListView>
 
                     <ListView
                         android:id="@+id/listaProductos"
