--- a/distrisandiz-master/app/src/main/res/layout/dialogo_lista_productos.xml
+++ b/distrisandiz-master/app/src/main/res/layout/dialogo_lista_productos.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/layout_boton_redondeado_blanco">
+    android:background="@drawable/layout_dialog">
 
     <TextView
         android:id="@+id/textView"
@@ -20,9 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="30sp"
         android:background="@drawable/layout_redondeado_gris"
-        android:paddingStart="10sp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:paddingStart="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:hint="Escribe el Nombre del Producto"
         android:inputType="text">
     </EditText>
@@ -30,7 +30,10 @@
     <ListView
         android:id="@+id/listViewProductos"
         android:layout_width="match_parent"
-        android:layout_height="400dp">
+        android:layout_height="400dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp">
     </ListView>
 
     <Button
