--- a/distrisandiz-master/app/src/main/res/layout/fragment_devoluciones.xml
+++ b/distrisandiz-master/app/src/main/res/layout/fragment_devoluciones.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#EFEFEF">
 
         <LinearLayout
             android:id="@+id/layout1"
@@ -36,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
                 android:textSize="20sp"
-                android:background="@drawable/layout_redondeado"
+                android:background="@drawable/layout_boton_redondeado_blanco"
                 android:layout_marginEnd="8dp"></TextView>
 
             <ImageView
@@ -58,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@drawable/layout_redondeado"
+            android:background="#EFEFEF"
             android:orientation="vertical"
             android:paddingBottom="1dp">
 
