--- a/distrisandiz-master/app/src/main/res/layout/item_list_clientes.xml
+++ b/distrisandiz-master/app/src/main/res/layout/item_list_clientes.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F3F3F3"
     android:orientation="vertical">
     <View
         android:layout_width="match_parent"
@@ -20,8 +21,8 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:src="@drawable/ic_user">
             </ImageView>
         </LinearLayout>
