--- a/distrisandiz-master/app/src/main/res/layout/item_list_productos.xml
+++ b/distrisandiz-master/app/src/main/res/layout/item_list_productos.xml
@@ -3,6 +3,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
+    android:background="#F3F3F3"
 android:orientation="vertical">
 <View
     android:layout_width="match_parent"
