-Añadir peso producto a tabla -Ajuste ventas canceladas -validar estatus de caja al realizar venta

--- a/distrisandiz-master/app/src/main/res/menu/bottom_navigation.xml
+++ b/distrisandiz-master/app/src/main/res/menu/bottom_navigation.xml
@@ -28,5 +28,5 @@
         android:id="@+id/navigation_Consultar"
         android:icon="@drawable/ic_venta"
         app:showAsAction="always"
-        android:title="Colsultar"/>
+        android:title="Consultar"/>
 </menu>
