--- a/distrisandiz-master/app/src/main/res/layout/item_ventas_totales.xml
+++ b/distrisandiz-master/app/src/main/res/layout/item_ventas_totales.xml
@@ -26,14 +26,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_weight="1">
+
             <TextView
+                android:id="@+id/tSigno"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$ "
+                android:textColor="#000000"
                 android:textSize="15sp"
-                android:textStyle="bold"
-                android:textColor="#000000">
-            </TextView>
+                android:textStyle="bold"></TextView>
             <TextView
                 android:id="@+id/txtTotal_vendido"
                 android:layout_width="wrap_content"
@@ -52,6 +53,7 @@
             android:textSize="15sp"
             android:layout_weight="1"
             android:textStyle="bold"
+            android:textColor="#000000"
             android:gravity="center">
         </TextView>
     </LinearLayout>
