--- a/distrisandiz-master/app/src/main/res/layout/activity_venta_productos.xml
+++ b/distrisandiz-master/app/src/main/res/layout/activity_venta_productos.xml
@@ -145,7 +145,7 @@
                         android:shadowColor="#808080"
                         android:shadowDx="0"
                         android:shadowDy="8"
-                        android:shadowRadius="4"></TextView>
+                        android:shadowRadius="4"/>
 
                     <TextView
                         android:id="@+id/txtTotal"
@@ -279,19 +279,23 @@
             tools:visibility="visible">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="2dp"
                     android:layout_marginTop="5dp"
                     android:orientation="horizontal">
-
-                    <ListView
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        tools:listitem="@layout/item_producto"/>
+                <!--    <ListView
                         android:id="@+id/listaProductos_cantidad"
                         android:layout_width="150dp"
                         android:layout_height="match_parent"
@@ -312,7 +316,7 @@
                         android:layout_width="200dp"
                         android:layout_height="match_parent"
                         android:layout_gravity="end"
-                        android:layout_weight="1"></ListView>
+                        android:layout_weight="1"></ListView> -->
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
