--- a/distrisandiz-master/app/src/main/res/layout/dialog_editar_producto.xml
+++ b/distrisandiz-master/app/src/main/res/layout/dialog_editar_producto.xml
@@ -60,78 +60,80 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:paddingStart="10dp"
-
         android:layout_gravity="center"
         android:hint="0"
         android:textSize="25sp"
         android:inputType="numberDecimal">
     </EditText>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-    <LinearLayout
-        android:id="@+id/btnCambiar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/layout_boton_redondeado"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_payment"
-            android:scaleType="centerInside"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp">
-        </ImageView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginTop="2dp"
-            android:text="Cambiar"
-            android:textColor="@color/cardview_light_background"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="5dp">
-        </TextView>
 
-    </LinearLayout>
     <LinearLayout
-        android:id="@+id/btnEliminar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:background="@drawable/layout_boton_redondeado_red"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_eliminar"
-            android:scaleType="centerInside"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center">
-        </ImageView>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginTop="2dp"
-            android:text="Eliminar"
-            android:textColor="@color/cardview_light_background"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="5dp">
-        </TextView>
+        android:layout_height="58dp"
+        android:layout_marginStart="8dp"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/btnCambiar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/layout_boton_redondeado"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="14dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_payment"></ImageView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="14dp"
+                android:text="Cambiar"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="24dp"
+                android:textStyle="bold"></TextView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btnEliminar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="22dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="14dp"
+            android:background="@drawable/layout_boton_redondeado_red"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_close"></ImageView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="5dp"
+                android:text="Eliminar"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="14dp"
+                android:textStyle="bold"></TextView>
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
