--- a/distrisandiz-master/app/src/main/res/layout/fragment_home.xml
+++ b/distrisandiz-master/app/src/main/res/layout/fragment_home.xml
@@ -85,7 +85,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_gravity="start"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
@@ -135,8 +136,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end
-"
+                android:layout_gravity="start"
+                android:layout_marginStart="20dp"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
